Table users {
  user_id int [pk]
  email varchar(255) [not null]
  login varchar(255) [not null]
  name varchar(255) [not null]
  birthday date [not null]
}

Table mpa {
  mpa_id int [pk]
  name varchar(10) [not null]
}

Table genres {
  genre_id int [pk]
  name varchar(50) [not null]
}

Table friendship_status {
  status_id int [pk]
  name varchar(20) [not null]
}

Table films {
  film_id int [pk]
  name varchar(255) [not null]
  description varchar(200)
  release_date date [not null]
  duration int [not null]
  mpa_id int [not null]
}

Table film_genres {
  film_id int [not null]
  genre_id int [not null]

  indexes {
    (film_id, genre_id) [pk]
  }
}

Table film_likes {
  film_id int [not null]
  user_id int [not null]

  indexes {
    (film_id, user_id) [pk]
  }
}

Table friendships {
  user_id int [not null]
  friend_id int [not null]
  status_id int [not null]

  indexes {
    (user_id, friend_id) [pk]
  }
}

Ref: films.mpa_id > mpa.mpa_id
Ref: film_genres.film_id > films.film_id
Ref: film_genres.genre_id > genres.genre_id
Ref: film_likes.film_id > films.film_id
Ref: film_likes.user_id > users.user_id
Ref: friendships.user_id > users.user_id
Ref: friendships.friend_id > users.user_id
Ref: friendships.status_id > friendship_status.status_id